force-app/main/default/objects/FlightFailure__c/FlightFailure__c.object-meta.xml
<CustomObject>
    <label>Flight Failure</label>
    <nameField>
        <displayFormat>FD-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Failures</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>