force-app/main/default/objects/FlightFailure__c/fields/AdditionalNotes__c.field-meta.xml
<CustomField>
    <fullName>AdditionalNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>