force-app/main/default/objects/FlightFailure__c/fields/Affect_Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>Affect_Sub_Section__c</fullName>
    <label>Affect Sub Section</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Affected_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Flight</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Premium Economy</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Row 1</fullName>
            </value>
            <value>
                <fullName>Row 2</fullName>
            </value>
            <value>
                <fullName>Row 3</fullName>
            </value>
            <value>
                <fullName>Row 4</fullName>
            </value>
            <value>
                <fullName>Row 5</fullName>
            </value>
            <value>
                <fullName>Row 6</fullName>
            </value>
            <value>
                <fullName>Row 7</fullName>
            </value>
            <value>
                <fullName>Row 8</fullName>
            </value>
            <value>
                <fullName>Row 9</fullName>
            </value>
            <value>
                <fullName>Row 10</fullName>
            </value>
            <value>
                <fullName>Row 11</fullName>
            </value>
            <value>
                <fullName>Row 12</fullName>
            </value>
            <value>
                <fullName>Row 13</fullName>
            </value>
            <value>
                <fullName>Row 14</fullName>
            </value>
            <value>
                <fullName>Row 15</fullName>
            </value>
            <value>
                <fullName>Row 16</fullName>
            </value>
            <value>
                <fullName>Row 17</fullName>
            </value>
            <value>
                <fullName>Row 18</fullName>
            </value>
            <value>
                <fullName>Row 19</fullName>
            </value>
            <value>
                <fullName>Row 20</fullName>
            </value>
            <value>
                <fullName>Row 21</fullName>
            </value>
            <value>
                <fullName>Row 22</fullName>
            </value>
            <value>
                <fullName>Row 23</fullName>
            </value>
            <value>
                <fullName>Row 24</fullName>
            </value>
            <value>
                <fullName>Row 25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>