force-app/main/default/objects/FlightFailure__c/fields/Affected_Region__c.field-meta.xml
<CustomField>
    <fullName>Affected_Region__c</fullName>
    <label>Affected Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Flight</fullName>
            </value>
            <value>
                <fullName>Cabin</fullName>
            </value>
            <value>
                <fullName>Zone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>