force-app/main/default/objects/FlightFailure__c/fields/ArrivalAirport__c.field-meta.xml
<CustomField>
    <fullName>ArrivalAirport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Airport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>