force-app/main/default/objects/FlightFailure__c/fields/CategoryCode__c.field-meta.xml
<CustomField>
    <fullName>CategoryCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>