force-app/main/default/objects/FlightFailure__c/fields/DepartureAirport__c.field-meta.xml
<CustomField>
    <fullName>DepartureAirport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Airport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>