force-app/main/default/objects/FlightFailure__c/fields/DepartureDateLocal__c.field-meta.xml
<CustomField>
    <fullName>DepartureDateLocal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Date Local</label>
    <type>Date</type>
</CustomField>