force-app/main/default/objects/FlightFailure__c/fields/Disruption_Type__c.field-meta.xml
<CustomField>
    <fullName>Disruption_Type__c</fullName>
    <label>Disruption Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acft/Ramp Handling</fullName>
            </value>
            <value>
                <fullName>Aircraft Cleaning</fullName>
            </value>
            <value>
                <fullName>Aircrew Rotation</fullName>
            </value>
            <value>
                <fullName>Airport &amp; Govt Auth</fullName>
            </value>
            <value>
                <fullName>Airport Services</fullName>
            </value>
            <value>
                <fullName>Air Traffic Services</fullName>
            </value>
            <value>
                <fullName>Apt Infrastructure</fullName>
            </value>
            <value>
                <fullName>Auto Equipment</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>Cabin Crew</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Damage to Aircraft</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Enroute delays</fullName>
            </value>
            <value>
                <fullName>Flight Operations</fullName>
            </value>
            <value>
                <fullName>Freight &amp; Mail</fullName>
            </value>
            <value>
                <fullName>Fuelling</fullName>
            </value>
            <value>
                <fullName>Load Control</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Network &amp; Airline Op</fullName>
            </value>
            <value>
                <fullName>No Group Allocated</fullName>
            </value>
            <value>
                <fullName>Rotation</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Cabin</fullName>
            </value>
            <value>
                <fullName>Aircraft Grounded</fullName>
            </value>
            <value>
                <fullName>Customer Delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>