force-app/main/default/objects/FlightFailure__c/fields/DisruptionSubType__c.field-meta.xml
<CustomField>
    <fullName>DisruptionSubType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Disruption SubType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>