force-app/main/default/objects/FlightFailure__c/fields/EmployeeMessage__c.field-meta.xml
<CustomField>
    <fullName>EmployeeMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>