force-app/main/default/objects/FlightFailure__c/fields/Estimated_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Arrival_Time__c</fullName>
    <formula>if(ISBLANK(EstimatedArrivalTimeUtc__c),&quot;&quot;,TEXT(DAY(DATEVALUE(EstimatedArrivalTimeUtc__c))) &amp; &quot;/&quot; &amp; 
TEXT(MONTH(DATEVALUE(EstimatedArrivalTimeUtc__c))) &amp; &quot;/&quot; &amp; 
TEXT(YEAR(DATEVALUE( EstimatedArrivalTimeUtc__c ))) &amp; &quot; &quot; &amp; 


TEXT(HOUR(TIMEVALUE(EstimatedArrivalTimeUtc__c))) &amp; &quot;:&quot; &amp; 
TEXT(MINUTE(TIMEVALUE(EstimatedArrivalTimeUtc__c))) &amp; &quot;:&quot; &amp; 
TEXT(SECOND(TIMEVALUE(EstimatedArrivalTimeUtc__c))))</formula>
    <label>Estimated Arrival Time</label>
    <type>Text</type>
</CustomField>