force-app/main/default/objects/FlightFailure__c/fields/EstimatedArrivalTimeUtc__c.field-meta.xml
<CustomField>
    <fullName>EstimatedArrivalTimeUtc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Arrival Time</label>
    <type>DateTime</type>
</CustomField>