force-app/main/default/objects/FlightFailure__c/fields/EstimatedDepartureZonedTime__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDepartureZonedTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Departure Zoned Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>