force-app/main/default/objects/FlightFailure__c/fields/EventStatus__c.field-meta.xml
<CustomField>
    <fullName>EventStatus__c</fullName>
    <description>QCC: Event Status</description>
    <formula>TEXT(Flight_Event__r.Status__c)</formula>
    <label>Event Status</label>
    <type>Text</type>
</CustomField>