force-app/main/default/objects/FlightFailure__c/fields/Failure_Code__c.field-meta.xml
<CustomField>
    <fullName>Failure_Code__c</fullName>
    <label>Failure Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Failure_Code</valueSetName>
    </valueSet>
</CustomField>