force-app/main/default/objects/FlightFailure__c/fields/Flight_Event__c.field-meta.xml
<CustomField>
    <fullName>Flight_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipName>Failure_Details</relationshipName>
    <type>Lookup</type>
</CustomField>