force-app/main/default/objects/FlightFailure__c/fields/IsWithinControl__c.field-meta.xml
<CustomField>
    <fullName>IsWithinControl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Within Control</label>
    <type>Checkbox</type>
</CustomField>