force-app/main/default/objects/FlightFailure__c/fields/LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>LanguageCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LanguageCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>