force-app/main/default/objects/FlightFailure__c/fields/OgsMessageId__c.field-meta.xml
<CustomField>
    <fullName>OgsMessageId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OgsMessageId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>