force-app/main/default/objects/FlightFailure__c/fields/OnlyLeg__c.field-meta.xml
<CustomField>
    <fullName>OnlyLeg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: True Only if Leg to be marked.</description>
    <label>Only Leg</label>
    <type>Checkbox</type>
</CustomField>