force-app/main/default/objects/FlightFailure__c/fields/Operating_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Operating_Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operating Carrier</label>
    <length>3</length>
    <type>Text</type>
</CustomField>