force-app/main/default/objects/FlightFailure__c/fields/Post_Flight__c.field-meta.xml
<CustomField>
    <fullName>Post_Flight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Failure happens after Flight.</description>
    <label>Post Flight</label>
    <type>Checkbox</type>
</CustomField>