force-app/main/default/objects/FlightFailure__c/fields/Pre_Flight__c.field-meta.xml
<CustomField>
    <fullName>Pre_Flight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Failure happens before Flight.</description>
    <label>Pre Flight</label>
    <type>Checkbox</type>
</CustomField>