force-app/main/default/objects/FlightFailure__c/fields/ScheduledArrivalZonedTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledArrivalZonedTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ScheduledArrivalZonedTime</label>
    <length>100</length>
    <type>Text</type>
</CustomField>