force-app/main/default/objects/FlightFailure__c/fields/ScheduledDepartureTimeUtc__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDepartureTimeUtc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ScheduledDepartureTimeUtc</label>
    <type>DateTime</type>
</CustomField>