force-app/main/default/objects/FlightFailure__c/fields/ScheduledDepartureZonedTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDepartureZonedTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ScheduledDepartureZonedTime</label>
    <length>100</length>
    <type>Text</type>
</CustomField>