force-app/main/default/objects/FlightFailure__c/fields/Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Source Id</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>