force-app/main/default/objects/FlightFailure__c/fields/Tech_FlightEventStatus__c.field-meta.xml
<CustomField>
    <fullName>Tech_FlightEventStatus__c</fullName>
    <description>IOC: Flight Event Status, This is used in Trigger to check if flight failure can be deleted.</description>
    <formula>TEXT(Flight_Event__r.Status__c)</formula>
    <label>Flight Event Status</label>
    <type>Text</type>
</CustomField>