force-app/main/default/objects/FlightFailure__c/fields/TypeText__c.field-meta.xml
<CustomField>
    <fullName>TypeText__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>