force-app/main/default/objects/FlightFailure__c/fields/Unique_Event_ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>Unique_Event_ErrorCode__c</fullName>
    <description>This field is used for check Flight Event Duplication on the same Event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique Event-ErrorCode</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>