force-app/main/default/objects/FlightFailure__c/validationRules/PreventFlightFailureUpdates.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventFlightFailureUpdates</fullName>
    <active>true</active>
    <description>QCC: once the flight event is assigned or linked to Global Event Failures code can not be updated</description>
    <errorConditionFormula>$Setup.EnableValidationRule__c.VR_FltEvtEditingOnceLinkedtoGE__c 
&amp;&amp; (Flight_Event__r.GlobalEvent__c != Null 
				|| ( EventStatus__c == &apos;Assigned&apos; &amp;&amp; NOT(ISCHANGED(OnlyLeg__c))) 
				|| EventStatus__c == &apos;Closed&apos;)</errorConditionFormula>
    <errorMessage>Flight failure cannot be added or edited at this stage. This could be because the event is not assigned to CJM queue or its linked to a Global event</errorMessage>
</ValidationRule>